$Id: History,v 1.71 2003-02-06 15:45:31 urban Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

06 feb 03: L.Urban 
- important modifications in MSC (both in old design and model
  version)
  - changes in data members
  - algorithm to reduce the step dependence is new
  - new sampling for the geom.pathlengths

05 feb 03: V.Ivant (utils-V05-00-02)
- Fix on warnings at SUN for STD classes
- Add Initialise method to STD classes to calculate PartialSumSigma
- Subsitute Material by MaterialCutsCouple for PostStep STD

24 jan 03: V.Ivant (utils-V05-00-01)
- Migration to "cut per region" 

06 jan 03: V.Ivant (utils-V05-00-00)
- Update interfaces to STD classes in order to be ready to migrade 
  to "cut per region"

12 dec 02: V.Ivant (utils-V04-01-12)
- Fix in multiple scattering for 1 MeV protons in both implementations.

09 dec 02: V.Ivant (utils-V04-01-11)
- Removed warnings in G4SCProcessorStand and G4UniversalFluctuation.

06 dec 02: G.Cosmo (utils-V04-01-10)
- Merged changes for new G4ApplicationState in messengers.

04 dec 02: V.Ivant (utils-V04-01-09)
- STD processes: fix model selection + delta-electron spectra   

11 nov 02: V.Ivant (utils-V04-01-08)